--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@
     nav ul {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 15px;
       margin: 5px 5px;
     }
     
@@ -23,7 +24,7 @@
       background: transparent;
       border: solid rgb(253, 252, 252) 2px;
       border-radius: 25px;
-      padding: 10px 10px;
+      padding:10px 10px;
       color: rgb(255, 255, 255);
       text-decoration: none;
       font-weight: bold;
